test/invalid/baseline/id-underscored-number.txt
Syntax error at line 1 in id-underscored-number.webidl:
interface _0 {};
          ^ Missing name in interface
